# ex

./: Cargo.toml  README.md
ex/: Cargo.toml
ex-egui/: Cargo.toml
ex-egui/src/: app.rs  main.rs
ex-term/: Cargo.toml
ex/src/: lib.rs
ex_core/: Cargo.toml
ex_core/src/: lib.rs
ex_egui/: Cargo.toml
ex_egui/src/: app.rs  browser.rs  lib.rs  main.rs
ex_egui/src/app/: browser.rs  tabs.rs
src/: app.rs  helper.rs  lib.rs  main.rs
src/app/: browser.rs  helper.rs  table.rs  tabs.rs
