[package]
name = "ex"
version = "0.1.0"
edition = "2021"
default-run = "ex"

[dependencies]
eframe = {version  ="0.18.0", git = "https://github.com/emilk/egui"}
egui_extras = {version = "0.18.0", git = "https://github.com/emilk/egui"}
jwalk = "0.6.0"
open = "2.1.2"
trash = "2.1.2"
chrono = "0.4.19"
